[package]
name = "noce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempfile= "3.8.1"

[dependencies]
crossterm ="0.27.0"
clipboard = "0.5.0"
regex = "1.9.6"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
ratatui-textarea = "0.3.2"